<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CD2222"
    tools:context=".TeacherProfile">

    <Button
        android:id="@+id/tProfileDash"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:alpha="1"
        android:backgroundTint="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tProfileEdit"
        app:layout_constraintStart_toStartOf="@+id/tProfileEdit"
        app:layout_constraintTop_toBottomOf="@+id/tProfileEdit"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/tProfileEdit"
        android:layout_width="138dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tProfileDash"
        app:layout_constraintEnd_toEndOf="@+id/tProfilePass"
        app:layout_constraintStart_toStartOf="@+id/tProfilePass"
        app:layout_constraintTop_toBottomOf="@+id/tProfilePass"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tProfilePass"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginBottom="23dp"
        android:background="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="**********"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tProfileEdit"
        app:layout_constraintEnd_toEndOf="@+id/tProfileEmail"
        app:layout_constraintStart_toStartOf="@+id/tProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/tProfileEmail" />

    <TextView
        android:id="@+id/tProfileEmail"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginBottom="23dp"
        android:background="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tProfilePass"
        app:layout_constraintEnd_toEndOf="@+id/tProfileUser"
        app:layout_constraintStart_toStartOf="@+id/tProfileUser"
        app:layout_constraintTop_toBottomOf="@+id/tProfileUser" />

    <TextView
        android:id="@+id/tProfileUser"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginBottom="22dp"
        android:background="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tProfileEmail"
        app:layout_constraintEnd_toEndOf="@+id/tProfileName"
        app:layout_constraintStart_toStartOf="@+id/tProfileName"
        app:layout_constraintTop_toBottomOf="@+id/tProfileName" />

    <TextView
        android:id="@+id/Profile"
        android:layout_width="257dp"
        android:layout_height="39dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="16dp"
        android:background="#CEB326"
        android:backgroundTint="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tProfileName"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginBottom="23dp"
        android:background="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tProfileUser"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="150dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toTopOf="@+id/tProfileName"
        app:layout_constraintEnd_toEndOf="@+id/Profile"
        app:layout_constraintStart_toStartOf="@+id/Profile"
        app:layout_constraintTop_toBottomOf="@+id/Profile"
        app:srcCompat="@drawable/tarpmascot" />
</androidx.constraintlayout.widget.ConstraintLayout>