<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D31E1E"
    android:paddingTop="?attr/actionBarSize">

    <Button
        android:id="@+id/dashprof"
        android:layout_width="219dp"
        android:layout_height="320dp"
        android:layout_marginStart="16dp"
        android:alpha="1"
        android:backgroundTint="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/title_profile"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dashlogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dashlogout" />

    <Button
        android:id="@+id/dashmap"
        android:layout_width="219dp"
        android:layout_height="320dp"
        android:layout_marginTop="72dp"
        android:alpha="1"
        android:backgroundTint="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/title_map"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#B71C1C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/dashlogout"
        app:layout_constraintStart_toEndOf="@+id/dashclass"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/dashlogout"
        android:layout_width="219dp"
        android:layout_height="320dp"
        android:alpha="1"
        android:backgroundTint="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintStart_toEndOf="@+id/dashprof"
        app:layout_constraintTop_toBottomOf="@+id/dashmap" />

    <Button
        android:id="@+id/dashclass"
        android:layout_width="219dp"
        android:layout_height="320dp"
        android:alpha="1"
        android:backgroundTint="#CEB326"
        android:fontFamily="@font/orienta"
        android:text="@string/title_classes"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dashmap"
        app:layout_constraintStart_toStartOf="@+id/dashprof"
        app:layout_constraintTop_toTopOf="@+id/dashmap" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F15A5A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:background="#E60F0F"
        android:foreground="@android:drawable/ic_menu_myplaces"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_activity_main"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_activity_main"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main"
        app:srcCompat="@drawable/tarpmascot"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>